@@ -128,6 +128,7 @@ Pascal Eberhard <pascal dor eberhard at gmail dot com>
   
 Petr Holub <hopet@users.sourceforge.net>  
   fix autotools on FreeBSD in autogen.sh
+  Improved battery readout on FreeBSD
 
 Philip Kovacs <pkovacs at users dot sourceforge dot net>
   tcp port monitor with hashing functionality
